uf-6817: Read emailheaders from email, store them and provide them to clients