@@ -1,25 +1,34 @@
 package se.sundsvall.emailreader.integration.ews;
 
+import static java.time.temporal.ChronoUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static se.sundsvall.emailreader.api.model.Header.IN_REPLY_TO;
+import static se.sundsvall.emailreader.api.model.Header.MESSAGE_ID;
+import static se.sundsvall.emailreader.api.model.Header.REFERENCES;
 
 import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.util.Base64;
 import java.util.Date;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import microsoft.exchange.webservices.data.core.exception.service.local.ServiceLocalException;
 import microsoft.exchange.webservices.data.core.service.item.EmailMessage;
 import microsoft.exchange.webservices.data.property.complex.AttachmentCollection;
 import microsoft.exchange.webservices.data.property.complex.EmailAddress;
 import microsoft.exchange.webservices.data.property.complex.EmailAddressCollection;
 import microsoft.exchange.webservices.data.property.complex.FileAttachment;
+import microsoft.exchange.webservices.data.property.complex.InternetMessageHeader;
+import microsoft.exchange.webservices.data.property.complex.InternetMessageHeaderCollection;
 import microsoft.exchange.webservices.data.property.complex.ItemId;
 import microsoft.exchange.webservices.data.property.complex.MessageBody;
 
@@ -32,7 +41,127 @@ class EWSMapperTest {
 	@Test
 	void testToEmail() throws Exception {
 
-		final EmailMessage emailMessage = mock(EmailMessage.class);
+		// Mock
+		final var emailMessage = mock(EmailMessage.class);
+		final var internetMessageHeaderCollection = mock(InternetMessageHeaderCollection.class);
+		final var internetMessageHeader = mock(InternetMessageHeader.class);
+
+		when(emailMessage.getToRecipients()).thenReturn(new EmailAddressCollection());
+		emailMessage.getToRecipients().add("recipient@example.com");
+
+		when(emailMessage.getInternetMessageHeaders()).thenReturn(internetMessageHeaderCollection);
+		when(emailMessage.getInternetMessageHeaders().find(anyString())).thenReturn(internetMessageHeader);
+		when(internetMessageHeaderCollection.find(anyString()).getValue()).thenReturn("<Test1@Test1.se> <Test2@Test2.se> <Test3@Test3.se>");
+
+		when(emailMessage.getId()).thenReturn(new ItemId("123456789"));
+		when(emailMessage.getBody()).thenReturn(new MessageBody("Mocked email body"));
+		when(emailMessage.getSubject()).thenReturn("Test Email Subject");
+		when(emailMessage.getFrom()).thenReturn(new EmailAddress("test", "sender@example.com"));
+		when(emailMessage.getDateTimeReceived()).thenReturn(Date.from(Instant.now()));
+
+		when(emailMessage.getAttachments()).thenReturn(new AttachmentCollection());
+		final var attachments = emailMessage.getAttachments();
+		final var fileAttachment = mock(FileAttachment.class);
+		when(fileAttachment.getName()).thenReturn("Mocked attachment");
+		when(fileAttachment.getContent()).thenReturn("mockedfile.jpg".getBytes());
+		when(fileAttachment.getContentType()).thenReturn("text/plain");
+		attachments.getItems().add(fileAttachment);
+
+		// Act
+		final var result = mapper.toEmail(emailMessage);
+
+		// Assert
+		assertThat(result).hasNoNullFieldsOrPropertiesExcept("metadata");
+		assertThat(result.sender()).isEqualTo("sender@example.com");
+		assertThat(result.recipients()).hasSize(1).satisfies(
+			recipient -> assertThat(recipient.getFirst()).isEqualTo("recipient@example.com"));
+		assertThat(result.subject()).isEqualTo("Test Email Subject");
+		assertThat(result.message()).isEqualTo("Mocked email body");
+		assertThat(result.receivedAt()).isCloseTo(OffsetDateTime.now(), within(1, SECONDS));
+		assertThat(result.id()).isNotNull().isNotEmpty();
+		assertThat(result.attachments()).hasSize(1).satisfies(
+			attachment -> {
+				assertThat(attachment.getFirst().name()).isEqualTo("Mocked attachment");
+				assertThat(attachment.getFirst().contentType()).isEqualTo("text/plain");
+				assertThat(attachment.getFirst().content()).isEqualTo(Base64.getEncoder().encodeToString("mockedfile.jpg".getBytes()));
+			});
+		assertThat(result.headers()).hasSize(3).satisfies(
+			headers -> {
+				assertThat(headers.get(MESSAGE_ID)).hasSize(3).satisfies(
+					messageId -> assertThat(messageId).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+				assertThat(headers.get(IN_REPLY_TO)).hasSize(3).satisfies(
+					inReplyTo -> assertThat(inReplyTo).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+				assertThat(headers.get(REFERENCES)).hasSize(3).satisfies(
+					references -> assertThat(references).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+			});
+	}
+
+
+	@Test
+	void testToEmail_receivedAtNull() throws Exception {
+
+		// Mock
+		final var emailMessage = mock(EmailMessage.class);
+
+		when(emailMessage.getToRecipients()).thenReturn(new EmailAddressCollection());
+		emailMessage.getToRecipients().add("recipient@example.com");
+
+		final var internetMessageHeaderCollection = mock(InternetMessageHeaderCollection.class);
+		final var internetMessageHeader = mock(InternetMessageHeader.class);
+
+		when(emailMessage.getInternetMessageHeaders()).thenReturn(internetMessageHeaderCollection);
+		when(emailMessage.getInternetMessageHeaders().find(anyString())).thenReturn(internetMessageHeader);
+		when(internetMessageHeaderCollection.find(anyString()).getValue()).thenReturn("<Test1@Test1.se> <Test2@Test2.se> <Test3@Test3.se>");
+
+		when(emailMessage.getId()).thenReturn(new ItemId("123456789"));
+		when(emailMessage.getBody()).thenReturn(new MessageBody("Mocked email body"));
+		when(emailMessage.getSubject()).thenReturn("Test Email Subject");
+		when(emailMessage.getFrom()).thenReturn(new EmailAddress("test", "sender@example.com"));
+		when(emailMessage.getDateTimeReceived()).thenReturn(null);
+
+		when(emailMessage.getAttachments()).thenReturn(new AttachmentCollection());
+		final var attachments = emailMessage.getAttachments();
+		final var fileAttachment = mock(FileAttachment.class);
+		when(fileAttachment.getName()).thenReturn("Mocked attachment");
+		when(fileAttachment.getContent()).thenReturn("mockedfile.jpg".getBytes());
+		when(fileAttachment.getContentType()).thenReturn("text/plain");
+		attachments.getItems().add(fileAttachment);
+
+		// Act
+		final var result = mapper.toEmail(emailMessage);
+
+		// Assert
+		assertThat(result).hasNoNullFieldsOrPropertiesExcept("metadata", "receivedAt");
+
+		assertThat(result.sender()).isEqualTo("sender@example.com");
+		assertThat(result.recipients()).hasSize(1).satisfies(
+			recipient -> assertThat(recipient.getFirst()).isEqualTo("recipient@example.com"));
+		assertThat(result.subject()).isEqualTo("Test Email Subject");
+		assertThat(result.message()).isEqualTo("Mocked email body");
+		assertThat(result.receivedAt()).isNull();
+		assertThat(result.id()).isNotNull().isNotEmpty();
+		assertThat(result.attachments()).hasSize(1).satisfies(
+			attachment -> {
+				assertThat(attachment.getFirst().name()).isEqualTo("Mocked attachment");
+				assertThat(attachment.getFirst().contentType()).isEqualTo("text/plain");
+				assertThat(attachment.getFirst().content()).isEqualTo(Base64.getEncoder().encodeToString("mockedfile.jpg".getBytes()));
+			});
+		assertThat(result.headers()).hasSize(3).satisfies(
+			headers -> {
+				assertThat(headers.get(MESSAGE_ID)).hasSize(3).satisfies(
+					messageId -> assertThat(messageId).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+				assertThat(headers.get(IN_REPLY_TO)).hasSize(3).satisfies(
+					inReplyTo -> assertThat(inReplyTo).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+				assertThat(headers.get(REFERENCES)).hasSize(3).satisfies(
+					references -> assertThat(references).isEqualTo(List.of("Test1@Test1.se", "Test2@Test2.se", "Test3@Test3.se")));
+			});
+	}
+
+	@Test
+	void testToEmail_noHeaders_noAttachments() throws Exception {
+
+		// Mock
+		final var emailMessage = mock(EmailMessage.class);
 
 		when(emailMessage.getToRecipients()).thenReturn(new EmailAddressCollection());
 		emailMessage.getToRecipients().add("recipient@example.com");
@@ -43,69 +172,35 @@ class EWSMapperTest {
 		when(emailMessage.getFrom()).thenReturn(new EmailAddress("test", "sender@example.com"));
 		when(emailMessage.getDateTimeReceived()).thenReturn(Date.from(Instant.now()));
 
-		when(emailMessage.getAttachments()).thenReturn(new AttachmentCollection());
-		final AttachmentCollection attachments = emailMessage.getAttachments();
-		final FileAttachment fileAttachment = mock(FileAttachment.class);
-		when(fileAttachment.getName()).thenReturn("Mocked attachment");
-		when(fileAttachment.getContent()).thenReturn("mockedfile.jpg".getBytes());
-		when(fileAttachment.getContentType()).thenReturn("text/plain");
-		attachments.getItems().add(fileAttachment);
 
+		// Act
 		final var result = mapper.toEmail(emailMessage);
+
+		// Assert
+		assertThat(result).hasNoNullFieldsOrPropertiesExcept("metadata", "headers", "attachments");
 
 		assertThat(result.sender()).isEqualTo("sender@example.com");
 		assertThat(result.recipients()).hasSize(1).satisfies(
-			recipient -> assertThat(recipient.get(0)).isEqualTo("recipient@example.com"));
+			recipient -> assertThat(recipient.getFirst()).isEqualTo("recipient@example.com"));
 		assertThat(result.subject()).isEqualTo("Test Email Subject");
 		assertThat(result.message()).isEqualTo("Mocked email body");
-		assertThat(result.receivedAt()).isCloseTo(OffsetDateTime.now(), within(1, java.time.temporal.ChronoUnit.SECONDS));
+		assertThat(result.receivedAt()).isCloseTo(OffsetDateTime.now(), within(1, SECONDS));
 		assertThat(result.id()).isNotNull().isNotEmpty();
-		assertThat(result.attachments()).hasSize(1).satisfies(
-			attachment -> {
-				assertThat(attachment.get(0).name()).isEqualTo("Mocked attachment");
-				assertThat(attachment.get(0).contentType()).isEqualTo("text/plain");
-				assertThat(attachment.get(0).content()).isEqualTo(Base64.getEncoder().encodeToString("mockedfile.jpg".getBytes()));
-			});
+		assertThat(result.attachments()).isEmpty();
+		assertThat(result.headers()).isEmpty();
 	}
-
 
 	@Test
-	void testToEmail_receivedAtNull() throws Exception {
+	void testToEmail_throwException() throws Exception {
 
-		final EmailMessage emailMessage = mock(EmailMessage.class);
-
-		when(emailMessage.getToRecipients()).thenReturn(new EmailAddressCollection());
-		emailMessage.getToRecipients().add("recipient@example.com");
-
-		when(emailMessage.getId()).thenReturn(new ItemId("123456789"));
-		when(emailMessage.getBody()).thenReturn(new MessageBody("Mocked email body"));
-		when(emailMessage.getSubject()).thenReturn("Test Email Subject");
-		when(emailMessage.getFrom()).thenReturn(new EmailAddress("test", "sender@example.com"));
-		when(emailMessage.getDateTimeReceived()).thenReturn(null);
-
-		when(emailMessage.getAttachments()).thenReturn(new AttachmentCollection());
-		final AttachmentCollection attachments = emailMessage.getAttachments();
-		final FileAttachment fileAttachment = mock(FileAttachment.class);
-		when(fileAttachment.getName()).thenReturn("Mocked attachment");
-		when(fileAttachment.getContent()).thenReturn("mockedfile.jpg".getBytes());
-		when(fileAttachment.getContentType()).thenReturn("text/plain");
-		attachments.getItems().add(fileAttachment);
-
+		// Mock
+		final var emailMessage = mock(EmailMessage.class);
+		when(emailMessage.getToRecipients()).thenThrow(new ServiceLocalException("Something went wrong"));
+		// Act
 		final var result = mapper.toEmail(emailMessage);
-
-		assertThat(result.sender()).isEqualTo("sender@example.com");
-		assertThat(result.recipients()).hasSize(1).satisfies(
-			recipient -> assertThat(recipient.get(0)).isEqualTo("recipient@example.com"));
-		assertThat(result.subject()).isEqualTo("Test Email Subject");
-		assertThat(result.message()).isEqualTo("Mocked email body");
-		assertThat(result.receivedAt()).isNull();
-		assertThat(result.id()).isNotNull().isNotEmpty();
-		assertThat(result.attachments()).hasSize(1).satisfies(
-			attachment -> {
-				assertThat(attachment.get(0).name()).isEqualTo("Mocked attachment");
-				assertThat(attachment.get(0).contentType()).isEqualTo("text/plain");
-				assertThat(attachment.get(0).content()).isEqualTo(Base64.getEncoder().encodeToString("mockedfile.jpg".getBytes()));
-			});
+		// Assert
+		assertThat(result).isNull();
 	}
+
 
 }
