@@ -2,10 +2,8 @@ package se.sundsvall.emailreader.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 import static se.sundsvall.emailreader.TestUtility.createEmailEntity;
@@ -16,19 +14,13 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import se.sundsvall.emailreader.api.model.Header;
 import se.sundsvall.emailreader.integration.db.EmailRepository;
-import se.sundsvall.emailreader.integration.db.entity.AttachmentEntity;
-import se.sundsvall.emailreader.integration.db.entity.EmailEntity;
-import se.sundsvall.emailreader.service.mapper.EmailMapper;
 
 @ExtendWith(MockitoExtension.class)
 class EmailServiceTest {
-
-	@Spy
-	private EmailMapper mapper;
 
 	@Mock
 	private EmailRepository emailRepository;
@@ -46,7 +38,7 @@ class EmailServiceTest {
 
 		assertThat(result).isNotNull().hasSize(1);
 
-		final var email = result.get(0);
+		final var email = result.getFirst();
 
 		assertThat(email).isNotNull();
 		assertThat(email.id()).isEqualTo("someId");
@@ -55,15 +47,15 @@ class EmailServiceTest {
 			assertThat(recipient).isEqualTo("someRecipient"));
 		assertThat(email.sender()).isEqualTo("someSender");
 		assertThat(email.message()).isEqualTo("someMessage");
+		assertThat(email.headers()).hasSize(3)
+			.containsEntry(Header.MESSAGE_ID, List.of("someValue"))
+			.containsEntry(Header.REFERENCES, List.of("someReferenceValue"))
+			.containsEntry(Header.IN_REPLY_TO, List.of("someReplyToValue"));
 		assertThat(email.metadata()).hasSize(1).containsEntry("someKey", "someValue");
 
-		verify(mapper, times(1)).toEmails(anyList());
-		verify(mapper, times(1)).toEmail(any(EmailEntity.class));
-		verify(mapper, times(1)).toAttachment(any(AttachmentEntity.class));
 		verify(emailRepository, times(1))
 			.findByMunicipalityIdAndNamespace(any(String.class), any(String.class));
 		verifyNoMoreInteractions(emailRepository);
-		verifyNoMoreInteractions(mapper);
 	}
 
 	@Test
@@ -73,7 +65,6 @@ class EmailServiceTest {
 
 		verify(emailRepository, times(1)).deleteById(any(String.class));
 		verifyNoMoreInteractions(emailRepository);
-		verifyNoInteractions(mapper);
 	}
 
 }
